[gd_scene format=3 uid="uid://d1va66oo4rpjs"]

[ext_resource type="Texture2D" uid="uid://bn6ljhjkyrf3s" path="res://arts/test/AofHearts.png" id="1_j63hw"]
[ext_resource type="Script" uid="uid://brnkusy2gviae" path="res://scripts/UI/DocumentUIController.gd" id="1_jtc8e"]
[ext_resource type="PackedScene" uid="uid://cqlioob2vxlrm" path="res://scenes/UI/StampsUI.tscn" id="4_r08wx"]
[ext_resource type="PackedScene" uid="uid://md8i3d7u0ov2" path="res://scenes/UI/TranscriptUI.tscn" id="5_qd52h"]

[sub_resource type="Theme" id="Theme_jtc8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j63hw"]
bg_color = Color(1, 1, 1, 0.23529412)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DocumentsUi" type="CanvasLayer" unique_id=60002005]
script = ExtResource("1_jtc8e")

[node name="Background Color" type="ColorRect" parent="." unique_id=376951773]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jtc8e")
color = Color(0, 0, 0, 0.39215687)
metadata/_edit_use_anchors_ = true

[node name="Document Container" type="Control" parent="." unique_id=1875101757]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Document Image" type="TextureRect" parent="Document Container" unique_id=1568801539]
layout_mode = 1
offset_right = 394.0
offset_bottom = 595.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_j63hw")
stretch_mode = 5

[node name="Return Button Margin" type="MarginContainer" parent="." unique_id=837859001]
offset_right = 99.0
offset_bottom = 65.0
size_flags_horizontal = 8
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
metadata/_edit_use_anchors_ = true

[node name="Background Return Btn" type="PanelContainer" parent="Return Button Margin" unique_id=12166107]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j63hw")

[node name="Return Btn" type="Button" parent="Return Button Margin/Background Return Btn" unique_id=841261689]
layout_mode = 2
text = "<- Voltar"

[node name="Right Buttons Margin" type="MarginContainer" parent="." unique_id=1890170435]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -116.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30
metadata/_edit_use_anchors_ = true

[node name="Right ButtonsVBox" type="VBoxContainer" parent="Right Buttons Margin" unique_id=1248856128]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Background Stamp Btn" type="PanelContainer" parent="Right Buttons Margin/Right ButtonsVBox" unique_id=153621172]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j63hw")

[node name="Stamp Btn" type="Button" parent="Right Buttons Margin/Right ButtonsVBox/Background Stamp Btn" unique_id=1949532077]
layout_mode = 2
text = "Carimbar"

[node name="Background Transcription Btn" type="PanelContainer" parent="Right Buttons Margin/Right ButtonsVBox" unique_id=369078058]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j63hw")

[node name="Transcription Btn" type="Button" parent="Right Buttons Margin/Right ButtonsVBox/Background Transcription Btn" unique_id=666848894]
layout_mode = 2
text = "Ler Transcrição"

[node name="StampsUI" parent="." unique_id=1639411058 instance=ExtResource("4_r08wx")]
metadata/_edit_use_anchors_ = true

[node name="Transcript UI" parent="." unique_id=311180170 instance=ExtResource("5_qd52h")]
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Return Button Margin/Background Return Btn/Return Btn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="Right Buttons Margin/Right ButtonsVBox/Background Stamp Btn/Stamp Btn" to="." method="_on_stamp_btn_pressed"]
[connection signal="pressed" from="Right Buttons Margin/Right ButtonsVBox/Background Transcription Btn/Transcription Btn" to="." method="_on_transcription_btn_pressed"]
